--- a/ui/LoginPage.ui
+++ b/ui/LoginPage.ui
@@ -6,66 +6,57 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>652</width>
-    <height>495</height>
+    <width>588</width>
+    <height>426</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>shoping mall</string>
+   <string>Dialog</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>50</y>
-     <width>451</width>
-     <height>61</height>
+     <x>240</x>
+     <y>90</y>
+     <width>121</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:48pt;&quot;&gt;welcome to our shop&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:24pt;&quot;&gt;Login Page&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="login_button">
+  <widget class="QLineEdit" name="ID_input">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>250</y>
+     <x>240</x>
+     <y>160</y>
      <width>113</width>
-     <height>32</height>
+     <height>21</height>
     </rect>
-   </property>
-   <property name="text">
-    <string>login</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="register_button">
+  <widget class="QLineEdit" name="PW_input">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>250</y>
+     <x>240</x>
+     <y>190</y>
      <width>113</width>
-     <height>32</height>
+     <height>21</height>
     </rect>
-   </property>
-   <property name="text">
-    <string>register</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>180</y>
+     <x>170</x>
+     <y>160</y>
      <width>60</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>id</string>
+    <string>ID</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -74,54 +65,46 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>220</y>
+     <x>170</x>
+     <y>190</y>
      <width>60</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>password</string>
+    <string>PW</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLineEdit" name="id_input">
+  <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>170</y>
-     <width>231</width>
-     <height>31</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="password_input">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>210</y>
-     <width>231</width>
-     <height>31</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="quit_button">
-   <property name="geometry">
-    <rect>
-     <x>520</x>
-     <y>450</y>
+     <x>170</x>
+     <y>230</y>
      <width>113</width>
      <height>32</height>
     </rect>
    </property>
    <property name="text">
-    <string>quit</string>
+    <string>Login</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>230</y>
+     <width>113</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Register</string>
    </property>
   </widget>
  </widget>
  <resources/>
  <connections/>
- <slots>
-  <slot>butten_clicked()</slot>
-  <slot>groupbutton_clicked()</slot>
- </slots>
 </ui>
