--- a/ui/inventory.ui
+++ b/ui/inventory.ui
@@ -49,12 +49,18 @@
       <height>301</height>
      </rect>
     </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="verticalScrollMode">
+     <enum>QAbstractItemView::ScrollPerItem</enum>
+    </property>
    </widget>
    <widget class="QPushButton" name="btn_addinven">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>430</y>
+      <x>150</x>
+      <y>500</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -93,9 +99,9 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>410</y>
+      <y>430</y>
       <width>111</width>
-      <height>131</height>
+      <height>111</height>
      </rect>
     </property>
    </widget>
@@ -123,6 +129,45 @@
     </property>
     <property name="text">
      <string>가격</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_purchaseList">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>500</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>판매기록</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_profile">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>500</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>프로필로</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>400</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>상품목록</string>
     </property>
    </widget>
   </widget>
